Added complete code

--- a/Images/hotelmap.html
+++ b/Images/hotelmap.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>heatmap</title>
+    <title>hotelmap</title>
 </head>
 <body>
 
@@ -57225,11 +57225,11 @@
         "data_bounds": [
           [
             -47.07135573042757,
-            -179.99999
+            -180.0
           ],
           [
             85.0,
-            179.99999
+            -180.0
           ]
         ],
         "initial_viewport": {
@@ -57241,7 +57241,9 @@
           "zoom_level": 2
         },
         "layers": [
-          "IPY_MODEL_abde56c99a894e1b8a3305e639c99e26"
+          "IPY_MODEL_abde56c99a894e1b8a3305e639c99e26",
+          "IPY_MODEL_50e67471ac86413cb07a7f4fd09c510a",
+          "IPY_MODEL_d90dbbf42aea4086a933c4bbb3035dc4"
         ],
         "layout": "IPY_MODEL_7dc060b92e834bbc8a6aa22b1fd0aa97"
       }
@@ -60242,6 +60244,436 @@
           79.0,
           88.0,
           70.0
+        ]
+      }
+    },
+    "75c4e41f3c814f7dae56d1120a650330": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>ABO GHANIMA HOME</dd>\n<dt>City</dt><dd>Ma\u0163\u0101y</dd>\n<dt>Country</dt><dd>EG</dd>\n</dl>\n",
+        "location": [
+          28.42,
+          30.78
+        ]
+      }
+    },
+    "7a52094b37b54ce4abc0ca15f6dc49c3": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Pousada Pontes</dd>\n<dt>City</dt><dd>S\u00e3o Domingos do Maranh\u00e3o</dd>\n<dt>Country</dt><dd>BR</dd>\n</dl>\n",
+        "location": [
+          -5.58,
+          -44.39
+        ]
+      }
+    },
+    "44c76186189044dba4b2c1a25435cfa8": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Hotel Xaguate</dd>\n<dt>City</dt><dd>S\u00e3o Filipe</dd>\n<dt>Country</dt><dd>CV</dd>\n</dl>\n",
+        "location": [
+          14.9,
+          -24.5
+        ]
+      }
+    },
+    "92f919dd2b914859ab34a82292751941": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Gostevoy Dom Vista</dd>\n<dt>City</dt><dd>Kurumkan</dd>\n<dt>Country</dt><dd>RU</dd>\n</dl>\n",
+        "location": [
+          54.3,
+          110.3
+        ]
+      }
+    },
+    "362b586c5bd64e73864a9bb7f77a7875": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Hotel kerdous</dd>\n<dt>City</dt><dd>Tiznit Province</dd>\n<dt>Country</dt><dd>MA</dd>\n</dl>\n",
+        "location": [
+          29.58,
+          -9.5
+        ]
+      }
+    },
+    "e53d4f6ff1ca437087c97d3c189f4076": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Super 8 by Wyndham Austin/Airport North</dd>\n<dt>City</dt><dd>Cherskiy</dd>\n<dt>Country</dt><dd>RU</dd>\n</dl>\n",
+        "location": [
+          68.75,
+          161.3
+        ]
+      }
+    },
+    "87804f367dab4322bd377d5742bd6b49": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Pousada Rodeio</dd>\n<dt>City</dt><dd>Elesb\u00e3o Veloso</dd>\n<dt>Country</dt><dd>BR</dd>\n</dl>\n",
+        "location": [
+          -6.2,
+          -42.14
+        ]
+      }
+    },
+    "8a39f117032042729d1755e7eb747042": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Algys</dd>\n<dt>City</dt><dd>Amga</dd>\n<dt>Country</dt><dd>RU</dd>\n</dl>\n",
+        "location": [
+          60.9,
+          131.96
+        ]
+      }
+    },
+    "35ea6e78cb4a47c592ca57c59c0569b5": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>KAYABI PALACE HOTEL E RESTAURANTE</dd>\n<dt>City</dt><dd>Diamantino</dd>\n<dt>Country</dt><dd>BR</dd>\n</dl>\n",
+        "location": [
+          -14.41,
+          -56.45
+        ]
+      }
+    },
+    "69d6f74fb4014383bfa23e38a47be634": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Gostinitsa \"Aleksandriya\"</dd>\n<dt>City</dt><dd>Verkh-Usugli</dd>\n<dt>Country</dt><dd>RU</dd>\n</dl>\n",
+        "location": [
+          52.7,
+          115.17
+        ]
+      }
+    },
+    "e9ba48bbe7db436aade63bb817582281": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Sheraton Asuncion Hotel</dd>\n<dt>City</dt><dd>San Lorenzo</dd>\n<dt>Country</dt><dd>PY</dd>\n</dl>\n",
+        "location": [
+          -25.33,
+          -57.53
+        ]
+      }
+    },
+    "624cb2c45cda4db39492ac327196dc45": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Serpa Hotel</dd>\n<dt>City</dt><dd>Itacoatiara</dd>\n<dt>Country</dt><dd>BR</dd>\n</dl>\n",
+        "location": [
+          -3.14,
+          -58.44
+        ]
+      }
+    },
+    "63e94957acc64d51aa19afae0f714b9e": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Voyage Hotel</dd>\n<dt>City</dt><dd>Yangi Marg`ilon</dd>\n<dt>Country</dt><dd>UZ</dd>\n</dl>\n",
+        "location": [
+          40.43,
+          71.72
+        ]
+      }
+    },
+    "ee074fc618894e1080f22248e0234a7c": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Rohail hotel Zhob</dd>\n<dt>City</dt><dd>Zhob</dd>\n<dt>Country</dt><dd>PK</dd>\n</dl>\n",
+        "location": [
+          31.34,
+          69.45
+        ]
+      }
+    },
+    "50e67471ac86413cb07a7f4fd09c510a": {
+      "model_name": "MarkerLayerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "data_bounds": [
+          [
+            -35.19527451977469,
+            -166.73277624447874
+          ],
+          [
+            81.86098880548897,
+            -170.50741274552283
+          ]
+        ],
+        "markers": [
+          "IPY_MODEL_75c4e41f3c814f7dae56d1120a650330",
+          "IPY_MODEL_7a52094b37b54ce4abc0ca15f6dc49c3",
+          "IPY_MODEL_44c76186189044dba4b2c1a25435cfa8",
+          "IPY_MODEL_92f919dd2b914859ab34a82292751941",
+          "IPY_MODEL_362b586c5bd64e73864a9bb7f77a7875",
+          "IPY_MODEL_e53d4f6ff1ca437087c97d3c189f4076",
+          "IPY_MODEL_87804f367dab4322bd377d5742bd6b49",
+          "IPY_MODEL_8a39f117032042729d1755e7eb747042",
+          "IPY_MODEL_35ea6e78cb4a47c592ca57c59c0569b5",
+          "IPY_MODEL_69d6f74fb4014383bfa23e38a47be634",
+          "IPY_MODEL_e9ba48bbe7db436aade63bb817582281",
+          "IPY_MODEL_624cb2c45cda4db39492ac327196dc45",
+          "IPY_MODEL_63e94957acc64d51aa19afae0f714b9e",
+          "IPY_MODEL_ee074fc618894e1080f22248e0234a7c"
+        ]
+      }
+    },
+    "e1dc53982c1044ea9a7ff4d17991e956": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>ABO GHANIMA HOME</dd>\n<dt>City</dt><dd>Ma\u0163\u0101y</dd>\n<dt>Country</dt><dd>EG</dd>\n</dl>\n",
+        "location": [
+          28.42,
+          30.78
+        ]
+      }
+    },
+    "b92a97b4027645ed950106595e57493a": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Pousada Pontes</dd>\n<dt>City</dt><dd>S\u00e3o Domingos do Maranh\u00e3o</dd>\n<dt>Country</dt><dd>BR</dd>\n</dl>\n",
+        "location": [
+          -5.58,
+          -44.39
+        ]
+      }
+    },
+    "2fac904c7bc74193b43f12f883c24bdd": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Hotel Xaguate</dd>\n<dt>City</dt><dd>S\u00e3o Filipe</dd>\n<dt>Country</dt><dd>CV</dd>\n</dl>\n",
+        "location": [
+          14.9,
+          -24.5
+        ]
+      }
+    },
+    "ceb03d98f82748089a918359ac26ec22": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Gostevoy Dom Vista</dd>\n<dt>City</dt><dd>Kurumkan</dd>\n<dt>Country</dt><dd>RU</dd>\n</dl>\n",
+        "location": [
+          54.3,
+          110.3
+        ]
+      }
+    },
+    "ba124c8df95442c79acceb2666786847": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Hotel kerdous</dd>\n<dt>City</dt><dd>Tiznit Province</dd>\n<dt>Country</dt><dd>MA</dd>\n</dl>\n",
+        "location": [
+          29.58,
+          -9.5
+        ]
+      }
+    },
+    "0b6de59f016247f7bb897e839589bcdb": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Super 8 by Wyndham Austin/Airport North</dd>\n<dt>City</dt><dd>Cherskiy</dd>\n<dt>Country</dt><dd>RU</dd>\n</dl>\n",
+        "location": [
+          68.75,
+          161.3
+        ]
+      }
+    },
+    "c612c46363bd456cbafef027704f6c68": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Pousada Rodeio</dd>\n<dt>City</dt><dd>Elesb\u00e3o Veloso</dd>\n<dt>Country</dt><dd>BR</dd>\n</dl>\n",
+        "location": [
+          -6.2,
+          -42.14
+        ]
+      }
+    },
+    "dd06c270cc314dc0ac7a1660477d279b": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Algys</dd>\n<dt>City</dt><dd>Amga</dd>\n<dt>Country</dt><dd>RU</dd>\n</dl>\n",
+        "location": [
+          60.9,
+          131.96
+        ]
+      }
+    },
+    "1441db5ceb954dae9ee0fa637c1c3247": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>KAYABI PALACE HOTEL E RESTAURANTE</dd>\n<dt>City</dt><dd>Diamantino</dd>\n<dt>Country</dt><dd>BR</dd>\n</dl>\n",
+        "location": [
+          -14.41,
+          -56.45
+        ]
+      }
+    },
+    "cf0b4519206543509fde47d0c1735a7a": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Gostinitsa \"Aleksandriya\"</dd>\n<dt>City</dt><dd>Verkh-Usugli</dd>\n<dt>Country</dt><dd>RU</dd>\n</dl>\n",
+        "location": [
+          52.7,
+          115.17
+        ]
+      }
+    },
+    "3cdb9b292b3143558adf6135dce44e75": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Sheraton Asuncion Hotel</dd>\n<dt>City</dt><dd>San Lorenzo</dd>\n<dt>Country</dt><dd>PY</dd>\n</dl>\n",
+        "location": [
+          -25.33,
+          -57.53
+        ]
+      }
+    },
+    "3ac9a0a79bad4bd694987dcc8b1df31f": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Serpa Hotel</dd>\n<dt>City</dt><dd>Itacoatiara</dd>\n<dt>Country</dt><dd>BR</dd>\n</dl>\n",
+        "location": [
+          -3.14,
+          -58.44
+        ]
+      }
+    },
+    "b09aa66b3fb64499898e0aeb6d58634f": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Voyage Hotel</dd>\n<dt>City</dt><dd>Yangi Marg`ilon</dd>\n<dt>Country</dt><dd>UZ</dd>\n</dl>\n",
+        "location": [
+          40.43,
+          71.72
+        ]
+      }
+    },
+    "d23bf61edba6455db188aae2a32b3493": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n<dl>\n<dt>Name</dt><dd>Rohail hotel Zhob</dd>\n<dt>City</dt><dd>Zhob</dd>\n<dt>Country</dt><dd>PK</dd>\n</dl>\n",
+        "location": [
+          31.34,
+          69.45
+        ]
+      }
+    },
+    "d90dbbf42aea4086a933c4bbb3035dc4": {
+      "model_name": "MarkerLayerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.9.0",
+      "state": {
+        "data_bounds": [
+          [
+            -35.19527451977469,
+            -166.73277624447874
+          ],
+          [
+            81.86098880548897,
+            -170.50741274552283
+          ]
+        ],
+        "markers": [
+          "IPY_MODEL_e1dc53982c1044ea9a7ff4d17991e956",
+          "IPY_MODEL_b92a97b4027645ed950106595e57493a",
+          "IPY_MODEL_2fac904c7bc74193b43f12f883c24bdd",
+          "IPY_MODEL_ceb03d98f82748089a918359ac26ec22",
+          "IPY_MODEL_ba124c8df95442c79acceb2666786847",
+          "IPY_MODEL_0b6de59f016247f7bb897e839589bcdb",
+          "IPY_MODEL_c612c46363bd456cbafef027704f6c68",
+          "IPY_MODEL_dd06c270cc314dc0ac7a1660477d279b",
+          "IPY_MODEL_1441db5ceb954dae9ee0fa637c1c3247",
+          "IPY_MODEL_cf0b4519206543509fde47d0c1735a7a",
+          "IPY_MODEL_3cdb9b292b3143558adf6135dce44e75",
+          "IPY_MODEL_3ac9a0a79bad4bd694987dcc8b1df31f",
+          "IPY_MODEL_b09aa66b3fb64499898e0aeb6d58634f",
+          "IPY_MODEL_d23bf61edba6455db188aae2a32b3493"
         ]
       }
     }
